--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,12 @@ authors = [
     { name = "Abhinav Natarajan", email = "natarajan@maths.ox.ac.uk"}
 ]
 dependencies = [
-    "scikit-learn==1.3.1",
-    "scikit-tda==1.0.0",
-    "matplotlib==3.8.0",
-    "gudhi==3.8.0",
-    "numpy==1.26.0",
-    "teaspoon==1.4.3"
+    "scikit-learn>=1.3.1",
+    "scikit-tda>=1.0.0",
+    "matplotlib>=3.8.0",
+    "gudhi>=3.8.0",
+    "numpy>=1.26.0",
+    "teaspoon>=1.4.3"
 ]
 
 [project.urls]
